--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "js-test-exe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://doumanash.github.io/js-test-exe-2",
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
